<resources>
    <string name="app_name"> POSAndroid </string>
    <string name="name_title_str_pos_software">STR POS Software</string>
    <string name="my_tb_title">this my toolbar</string>
    <string name="searchable">Searchable</string>
    <string name="menu_search">Search</string>
    <string name="menu_1">Option1</string>
    <string name="menu_2">Option2</string>
    <string name="save">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="sellproduct">Sell Product</string>
    <string name="btn_back">BACK</string>
    <string name="btn_ok">OK</string>
    <string name="hinttext_groupname">Group Name</string>
    <string name="hinthint_unitname">Unit Name</string>

    <string name="salesystem">SALE SYSTEM</string>
    <string name="productsetup">PRODUCT SETUP</string>
    <string name="setupcompany">SETUP COMPANY</string>
    <string name="report">REPORT</string>
    <string name="setup_company">SETUP COMPANY</string>
    <string name="edit">Edit</string>
    <string name="edit_company_data">Edit Company Data</string>
    <string name="use_barcode">USE BARCODE</string>
    <string name="use_touchscreen">USE TOUCHSCREEN</string>
    <string name="amount"><![CDATA[AMOUNT >>]]></string>
    <string name="qty">QTY</string>
    <string name="price">PRICE</string>
    <string name="payment">PAYMENT</string>
    <string name="begin">BEGIN</string>
    <string name="name">NAME</string>
    <string name="confirm_delete">"PLEASE CONFIRM PRODUCT DELETION :  "</string>
    <string name="title_deleteproduct">DELETE PRODUCT</string>
    <string name="delete_record">DELETE RECORD</string>
    <string name="delete_all_product">"PLEASE CONFIRM DELETE ALL PRODUCT :  "</string>
    <string name="title_deleteproductall">"Delete Product 'All' "</string>
    <string name="title_deleteproductx">DELETE PRODUCT</string>
    <string name="delete_product">"PLEASE CONFIRM DELETE PRODUCT :  "</string>
    <string name="disc">DISC.</string>
    <string name="setup_disc">SETUP DISC.</string>
    <string name="new_price">NEW PRICE</string>
    <string name="discount">DISCOUNT</string>
    <string name="discpercent">%DISC.</string>
    <string name="discount_volumn">DISCOUNT VOLUMN</string>
    <string name="disc_percentage">DISC. PERCENTAGE</string>
    <string name="txt_please_enter_qty">PLEASE ENTER QTY</string>
    <string name="txt_data">No Data</string>
    <string name="txt_please_enter_qtysale">PLEASE ENTER QTY (1-100)</string>
    <string name="txt_beginconfirm">PLEASE CONFIRM BEGIN NEW TRANSACTION ?</string>
    <string name="title_begin">Begin ?</string>
    <string name="total">TOTAL</string>
    <string name="vat">VAT</string>
    <string name="receive_amt">RECEIVE AMT</string>
    <string name="clear">Clear</string>
    <string name="txt_please_enter_amount">PLEASE ENTER AMOUNT</string>
    <string name="txt_receive_amont"><![CDATA["RECEIVE SHOULD NOT LESS THAN BILLING AMOUNT -> "]]></string>
    <string name="re_print">RE-PRINT</string>
    <string name="date">DATE</string>
    <string name="returnprice">RETURN</string>
    <string name="begin_barcode">Begin ( Barcode )</string>
    <string name="begin_manual">Begin ( Manual )</string>
    <string name="discpay">DISC.</string>
    <string name="group">GROUP</string>
    <string name="description">DESCRIPTION</string>
    <string name="txt_deletemanual">"PLEASE CONFIRM PRODUCT DELETION :  "</string>
    <string name="add_unit">ADD UNIT</string>
    <string name="add_product_group">ADD PRODUCT GROUP</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="edit_product_unit">UNIT DATA</string>
    <string name="edit_group_name">EDIT GROUP NAME</string>
    <string name="group_data">GROUP DATA</string>
    <string name="unit_data">UNIT DATA</string>
    <string name="edit_product_data">EDIT PRODUCT DATA</string>
    <string name="edit_unit_name">EDIT UNIT NAME</string>
    <string name="txt_pls_ent_group_name">PLEASE ENTER GROUP NAME : ?</string>
    <string name="txt_duplicate">DUPLICATE</string>
    <string name="txt_pls_confrim_dle_group">"PLEASE CONFIRM DELETE GROUP NAME "</string>
    <string name="txt_pls_confirm_del_unit">"PLEASE CONFIRM DELETE UNIT NAME: "</string>
    <string name="txt_pls_ent_unit_name">PLEASE ENTER UNIT NAME : ?</string>
    <string name="unit">UNIT</string>
    <string name="cost">COST</string>
    <string name="barcode">Barcode</string>
    <string name="no_vat">No VAT</string>
    <string name="txt_pls_setup_group_and_unit">PLEASE SETUP PRODUCT GROUP/ UNIT</string>
    <string name="txt_pls_setup_group">PLEASE SETUP PRODUCT GROUP</string>
    <string name="txt_pls_setup_unit">PLEASE SETUP PRODUCT UNIT</string>
    <string name="txt_pls_enter_product_name">PLEASE ENTER PRODUCT NAME ?</string>
    <string name="txt_pls_enter_price">PLEASE ENTER PRICE ?</string>
    <string name="txt_pls_enter_cost">PLEASE ENTER COST or 0 ?</string>
    <string name="txt_duplicate_product_name">DUPLICATE (PRODUCT NAME)</string>
    <string name="txt_duplicate_barcode_and_name">DUPLICATE (BARCODE AND PRODUCT NAME)</string>
    <string name="txt_duplicate_barcode">DUPLICATE (BARCODE)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="txt_pls_check_information">Please check the information.</string>
    <string name="txt_pls_confrim_del_product">"PLEASE CONFIRM DELETE PRODUCT : "</string>
    <string name="print_report">PRINT REPORT</string>
    <string name="save_report">SAVE REPORT</string>
    <string name="sale_report">SALE REPORT</string>
    <string name="daily_report">DAILY REPORT</string>
    <string name="product_sale_summary_by_day">PRODUCT SALE SUMMARY BY DAY</string>
    <string name="product_sale_summary_by_product">PRODUCT SALE SUMMARY BY PRODUCT</string>
    <string name="daily_sale_summary">DAILY SALE SUMMARY BY DAY</string>
    <string name="date_month_year">DD/MM/YY</string>
    <string name="daily_sale_summary_by_period">DAILY SALE SUMMARY BY PERIOD</string>
    <string name="to">to</string>
    <string name="daily_sale_summary_by_day">DAILY SALE SUMMARY BY DAY</string>
    <string name="product_sale_summary_by_period">PRODUCT SALE SUMMARY BY PERIOD</string>
    <string name="report_transaction">REPORT TRANSACTION</string>
    <string name="product_sale_summary_by_day_csv">PRODUCT SALE SUMMARY BY DAY (.CSV)</string>
    <string name="report_transaction_csv">REPORT TRANSACTION (.CSV)</string>
    <string name="discPercent">Between 0 - 100 (%)</string>


</resources>
