<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/my_toolbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/my_toolbar"
            layout="@layout/toolbarproductreport"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/report_transaction"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsizetitle"
            android:textStyle="bold"/>
    </RelativeLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbarlayout"
        android:orientation="vertical"
        android:weightSum="2"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:orientation="vertical"

            >

            <RadioGroup
                android:id="@+id/radiogroup_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:checkedButton="@+id/radio_date_day">

                <RadioButton
                    android:id="@+id/radio_date_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_sale_summary_by_day"
                    android:textSize="@dimen/textsize_report_title"
                    />

                <EditText
                    android:id="@+id/edit_date_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:hint="@string/date_month_year"
                    android:inputType="date"
                    android:textSize="@dimen/textsize_report_date"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/radio_date_between"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/product_sale_summary_by_period"
                    android:textSize="@dimen/textsize_report_title"
                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_date_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:hint="@string/date_month_year"
                        android:inputType="date"
                        android:textSize="@dimen/textsize_report_date"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/edit_date_one"
                        android:layout_toRightOf="@+id/edit_date_one"
                        android:text="@string/to"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/edit_date_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/edit_date_one"
                        android:layout_toRightOf="@+id/to"
                        android:gravity="center"
                        android:hint="@string/date_month_year"
                        android:inputType="date"
                        android:textSize="@dimen/textsize_report_date"
                        android:textStyle="bold"/>
                </RelativeLayout>


            </RadioGroup>


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/btn_print"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="#9E9D24"
                    android:text="@string/print_report"
                    android:textSize="@dimen/textsize_productset">

                </com.gc.materialdesign.views.ButtonRectangle>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/btn_back"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="#9E9D24"
                    android:text="@string/btn_back"
                    android:textSize="@dimen/textsize_productset">

                </com.gc.materialdesign.views.ButtonRectangle>

            </FrameLayout>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>