<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <include
            android:id="@+id/my_toolbar"
            layout="@layout/toolbarsaleproduct"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="30dp"
            android:text="@string/disc"
            android:layout_centerVertical="true"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:orientation="vertical"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3">

                    <TextView
                        android:id="@+id/txt_Total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/new_price"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        />

                    <TextView

                        android:id="@+id/txt_NameTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/txt_Total"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="70dp"
                        android:layout_toRightOf="@+id/txt_Total"
                        android:background="#000000"
                        android:gravity="center"
                        android:inputType="text"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp"/>


                </RelativeLayout>

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.7">



                    <CheckBox
                        android:id="@+id/checkbox_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:freezesText="true"
                        android:text="@string/setup_disc"
                        android:textSize="25sp"/>

                    <EditText
                        android:id="@+id/editText_DiscountCost"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/checkbox_discount"
                        android:layout_margin="15dp"
                        android:background="@color/thumbColor"
                        android:gravity="center"
                        android:hint="@string/discount"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textSize="20sp"
                        />

                    <EditText
                        android:id="@+id/editText_DiscountPercent"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/editText_DiscountCost"
                        android:layout_margin="15dp"
                        android:background="@color/thumbColor"
                        android:gravity="center"
                        android:hint="@string/discpercent"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textSize="20sp"
                        />

                    <RadioGroup
                        android:id="@+id/radiogroup_discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/checkbox_discount"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_toRightOf="@+id/editText_DiscountCost"
                        >

                        <RadioButton
                            android:id="@+id/radiobutton_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/discount_volumn"
                            android:textSize="20sp"/>

                        <RadioButton
                            android:id="@+id/radiobutton_percent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:text="@string/disc_percentage"
                            android:textSize="20sp"/>
                    </RadioGroup>


                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:orientation="vertical"
                    android:weightSum="2"
                    >

                    <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1.2"
                        android:text="@string/save"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        >

                    </com.gc.materialdesign.views.ButtonRectangle>

                    <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/btn_back"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="0.8"
                        android:background="#FFD600"
                        android:text="@string/btn_back"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"

                    >
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>