<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbarproduct"/>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="12dp"
        android:background="@android:color/transparent"
        android:paddingLeft="5dp"
        android:src="@drawable/ic_arrow_back"
        />

    <TextView
        android:id="@+id/txt_editUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_back"
        android:layout_toRightOf="@+id/btn_back"
        android:paddingLeft="20dp"
        android:text="@string/edit_product_data"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        />


    <com.gc.materialdesign.views.ButtonRectangle

        android:id="@+id/btn_edit_product"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_toLeftOf="@+id/btn_delete"

        android:background="#311B92"
        android:text="@string/save"
        android:textSize="18sp"

        >

    </com.gc.materialdesign.views.ButtonRectangle>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btn_delete"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_save"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:background="#FF4081"
        android:text="@string/delete"
        android:textSize="18sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.9"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_default_normal"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textSize="@dimen/txtsize"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/editText_Barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/editText_product"
                    android:layout_below="@+id/editText_product"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_default_normal"
                    android:gravity="center"
                    android:hint="@string/barcode"
                    android:inputType="number"
                    android:padding="20dp"
                    android:textSize="@dimen/txtsize"
                    android:textStyle="bold"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/txt_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/edit_price"

                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/price"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        />

                    <EditText
                        android:id="@+id/edit_price"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_price"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/btn_default_normal"
                        android:gravity="center"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"
                        android:textSize="25sp"
                        android:textStyle="bold"

                        />

                    <TextView

                        android:id="@+id/txt_priceCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"

                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@+id/edit_price"
                        android:text="@string/cost"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        />

                    <EditText
                        android:id="@+id/edit_priceCost"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/edit_price"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/edit_price"
                        android:background="@drawable/btn_default_normal"
                        android:gravity="center"
                        android:hint="@string/cost"
                        android:inputType="numberDecimal"
                        android:textSize="25sp"
                        android:textStyle="bold"

                        />


                    <CheckBox
                        android:id="@+id/checkbox_vat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/edit_priceCost"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/edit_priceCost"
                        android:checked="false"
                        android:text="@string/no_vat"
                        android:textSize="25sp"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/txt_Unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/spinner_unit"
                        android:layout_below="@+id/edit_price"
                        android:layout_marginLeft="10dp"
                        android:text="@string/unit"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        />

                    <View
                        android:layout_width="200dp"
                        android:layout_height="2dp"
                        android:layout_alignLeft="@+id/spinner_unit"
                        android:layout_below="@+id/spinner_unit"
                        android:background="#000000"
                        />


                    <android.support.v7.widget.AppCompatSpinner

                        android:id="@+id/spinner_unit"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_below="@+id/txt_Unit"
                        android:layout_marginLeft="20dp"


                        >
                    </android.support.v7.widget.AppCompatSpinner>


                    <TextView
                        android:id="@+id/txt_Group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/spinner_group"
                        android:layout_below="@+id/edit_priceCost"
                        android:layout_marginLeft="15dp"
                        android:text="@string/group"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        />

                    <View
                        android:layout_width="200dp"
                        android:layout_height="2dp"
                        android:layout_alignLeft="@+id/spinner_group"
                        android:layout_below="@+id/spinner_group"
                        android:background="#000000"
                        />


                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinner_group"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_below="@+id/txt_Group"
                        android:layout_marginLeft="30dp"
                        android:layout_toRightOf="@+id/spinner_unit"
                        >

                    </android.support.v7.widget.AppCompatSpinner>

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05">

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>